--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
     <h1>Calculator</h1>
-    <form action="index.html" method="POST">
-        <input type="text" name="num1" placeholder="first number" id="">
-        <input type="text" name="num2" placeholder="second number" id="">
+    <form action="/" method="POST">
+        <input type="text" name="num1" placeholder="first number">
+        <input type="text" name="num2" placeholder="second number">
         <button type="submit" name="submit">Calculate</button>
     </form>
 </body>
